--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.1.2",
     "@angular/platform-browser-dynamic": "^19.1.2",
     "@angular/router": "^19.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@geoapify/geocoder-autocomplete": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
@@ -34,6 +35,7 @@
     "@angular/cli": "^19.1.3",
     "@angular/compiler-cli": "^19.1.2",
     "@angular/localize": "^19.1.2",
+    "@types/facebook-js-sdk": "^3.3.12",
     "@types/google.accounts": "^0.0.15",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.4.0",
