--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,8 @@
     "outDir": "./out-tsc/app",
     "types": [
       "google.accounts",
-      "@angular/localize"
+      "@angular/localize",
+      "facebook-js-sdk"
     ]
   },
   "files": [
